--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
           <div class="is-size-5 publication-authors">
             <span class="author-block">School of Computer Science and Engineering, Sun Yat-sen University, China</span>
-            <span class="author-block">*Main contributor †Corresponding author</span>
+            <span class="eql-cntrb"><small><sup>*</sup>Main Contributor <sup>†</sup>Corresponding Author</small></span>
           </div>
           <div class="column has-text-centered">
             <div class="publication-links">
