--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
     </div>
   </div>
 </section>
+
+<section class="section">
+<div class="container is-max-desktop">
+  <div class="columns is-centered">
+    <div class="column is-four-fifths">
+      <div class="content has-text-centered">
+        <img src="static/images/FuseChat-3.0.png" width=100%/>
+      </div>
+    </div>
+  </div>
+</div>
+
   
 <!-- Paper abstract -->
 <section class="hero teaser">
