--- a/index.html
+++ b/index.html
@@ -95,11 +95,17 @@
   </div>
 </section>
 
-
-<div align="center">
-  <img src="static/images/FuseChat-3.0.png" width=100%/>
 </div>
-
+  <section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-four-fifths">
+        <div class="content has-text-centered">
+          <img src="static/images/FuseChat-3.0.png" width=80%/>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <!-- Paper abstract -->
 <section class="hero teaser">
