--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   </div>
 </section>
 
-</div>
+<!-- </div>
   <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered">
@@ -105,12 +105,15 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 <!-- Paper abstract -->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
+      <div align="center">
+        <img src="static/images/FuseChat-3.0.png" width=80%/>
+      </div>
       <p>
         In this blog post, we present FuseChat-3.0, a series of models crafted to enhance performance by integrating the strengths of multiple source LLMs into more compact target LLMs. To achieve this fusion, we utilized four powerful source LLMs: Gemma-2-27B-it, Mistral-Large-Instruct-2407, Qwen2.5-72B-Instruct, and Llama-3.1-70B-Instruct. For the target LLMs, we employed three widely-used smaller models—Llama-3.1-8B-Instruct, Gemma2-9B-it, and Qwen2.5-7B-Instruct—along with two even more compact models—Llama-3.2-3B-Instruct and Llama-3.2-1B-Instruct. The implicit model fusion process involves a two-stage training pipeline comprising Supervised Fine-Tuning (SFT) to mitigate distribution discrepancies between target and source LLMs, and Direct Preference Optimization (DPO) for learning preferences from multiple source LLMs. The resulting FuseChat-3.0 models demonstrated substantial improvements in tasks related to general conversation, instruction following, mathematics, and coding. Notably, when Llama-3.1-8B-Instruct served as the target LLM, our fusion approach achieved an average improvement of 6.8 points across 14 benchmarks. Moreover, it showed significant improvements of 37.1 and 30.1 points on instruction-following test sets AlpacaEval-2 and Arena-Hard respectively. We have released the <a href="https://huggingface.co/FuseAI" target="_blank">FuseChat-3.0</a> models on Huggingface, stay tuned for the forthcoming dataset and code.
       </p>
