--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="keywords" content="FuseChat-3.0, Implicit Model Fusion, Preference Optimization, LLMs, SFT, DPO">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FuseChat-3.0: Preference Optimization for Implicit Model Fusion</title>
-<!--   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"> -->
+  <link rel="icon" type="image/x-icon" href="static/images/fuseai.jpg">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
   <link rel="stylesheet" href="static/css/bulma.min.css">
   <link rel="stylesheet" href="static/css/bulma-carousel.min.css">
