--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">FuseChat-3.0: Preference Optimization for Implicit Model Fusion</h1>
+<!--           <h1 class="title is-1 publication-title">FuseChat-3.0: Preference Optimization for Implicit Model Fusion</h1> -->
+          <h1 class="title is-1 publication-title">
+  <img src="static/images/fuseai.jpg" style="vertical-align: middle; margin-right: 10px;">
+  FuseChat-3.0: Preference Optimization for Implicit Model Fusion
+          </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://github.com/yangzy39" target="_blank">Ziyi Yang*</a>,
