--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-<!--           <h1 class="title is-1 publication-title">FuseChat-3.0: Preference Optimization for Implicit Model Fusion</h1> -->
-          <h1 class="title is-1 publication-title">
-  <img src="static/images/fuseai.jpg" style="vertical-align: middle; margin-right: 10px;">
-  FuseChat-3.0: Preference Optimization for Implicit Model Fusion
-          </h1>
+          <h1 class="title is-1 publication-title">FuseChat-3.0: Preference Optimization for Implicit Model Fusion</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://github.com/yangzy39" target="_blank">Ziyi Yang*</a>,
@@ -168,7 +164,7 @@
             Our datasets were designed to enhance model's instruction following, general conversation, mathematics, coding, and Chinese-language capabilities. We selected data from open-source community datasets, applying targeted filtering and preprocessing. Key datasets and filtering criteria included:
           </p>
           <ul>
-            <li><strong>Instruction Following & General Conversation</strong>: Sourced from <a href="https://huggingface.co/datasets/openbmb/UltraFeedback" target="_blank">UltraFeedback</a>, <a href="https://huggingface.co/datasets/Magpie-Align/Magpie-Pro-DPO-100K-v0.1" target="_blank">Magpie-Pro-DPO-100K-v0.1</a>, and <a href="https://huggingface.co/datasets/nvidia/HelpSteer2" target="_blank">HelpSteer2</a>, excluding code and math data.</li>
+            <li><strong>Instruction Following & General Conversation</strong>: Sourced from <a href="https://huggingface.co/datasets/openbmb/UltraFeedback">UltraFeedback</a>, <a href="https://huggingface.co/datasets/Magpie-Align/Magpie-Pro-DPO-100K-v0.1" target="_blank">Magpie-Pro-DPO-100K-v0.1</a>, and <a href="https://huggingface.co/datasets/nvidia/HelpSteer2" target="_blank">HelpSteer2</a>, excluding code and math data.</li>
             <li><strong>Mathematics</strong>: Selected from <a href="https://huggingface.co/datasets/nvidia/OpenMathInstruct-2" target="_blank">OpenMathInstruct-2</a>, with nearly 60,000 unique samples.</li>
             <li><strong>Coding</strong>: Curated from <a href="https://huggingface.co/datasets/greengerong/leetcode" target="_blank">leetcode</a> and <a href="https://huggingface.co/datasets/bigcode/self-oss-instruct-sc2-exec-filter-50k" target="_blank">self-oss-instruct-sc2-exec-filter-50k</a>, retaining prompts with test cases.</li>
             <li><strong>Chinese Language</strong>: Integrated <a href="https://huggingface.co/datasets/llamafactory/alpaca_gpt4_zh" target="_blank">alpaca_gpt4_zh</a> and <a href="https://huggingface.co/datasets/Magpie-Align/Magpie-Qwen2-Pro-200K-Chinese" target="_blank">Magpie-Qwen2-Pro-200K-Chinese</a>, filtering out code and math prompts to retain approximately 10,000 high-quality samples.</li>
