--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <li><strong>Chinese Language</strong>: We included single response sampled exclusively from Qwen-2.5-72B-Instruct.</li>
           </ul>
           <p>
-            The sampling parameters for different models are detailed in Table 2.
+            The sampling parameters for different models are detailed in Table below.
           </p>
           
           <table class="js-sort-table table hidden">
