--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
           <h1 class="title is-1 publication-title">FuseChat-3.0: Preference Optimization for Implicit Model Fusion</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://github.com/yangzy39" target="_blank">Ziyi Yang*</a>,
+              <a href="https://github.com/yangzy39" target="_blank">Ziyi Yang</a><sup>*</sup>,
             </span>
             <span class="author-block">
-              <a href="https://fanqiwan.github.io/" target="_blank">Fanqi Wan*</a>,
+              <a href="https://fanqiwan.github.io/" target="_blank">Fanqi Wan</a><sup>*</sup>,
             </span>
             <span class="author-block">
-              <a href="https://github.com/MrGGLS" target="_blank">Longguang Zhong*</a>,
+              <a href="https://github.com/MrGGLS" target="_blank">Longguang Zhong</a><sup>*</sup>,
             </span>
             <span class="author-block">
               Canbin Huang,
@@ -56,7 +56,7 @@
               Guosheng Liang,
             </span>
             <span class="author-block">
-              <a href="https://sites.google.com/site/xiaojunquan" target="_blank">Xiaojun Quan†</a>
+              <a href="https://sites.google.com/site/xiaojunquan" target="_blank">Xiaojun Quan</a><sup>†</sup>
             </span>
           </div>
           <div class="is-size-5 publication-authors">
