--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             <li><strong>Coding</strong> Tasks: HumanEval, MBPP, LiveCodeBench 2408-2411.</li>
           </ul>
           <p>
-            We include more details and release our evaluation code at <a href="https://github.com/SLIT-AI/FuseChat-3.0/FuseEval" target="_blank">FuseEval</a>.
+            We include more details and release our evaluation code at <a href="https://github.com/SLIT-AI/FuseChat-3.0/tree/main/FuseEval" target="_blank">FuseEval</a>.
           </p>
           <p>
             The evaluation results of five series fused models are as follows, showing that our FuseChat-3.0 models achieved varying degrees of improvement across different target models. When selecting Llama-3.1-8B-Instruct as the target model, our fusion model <strong>FuseChat-Llama-3.1-8B-Instruct achieved an average performance improvement of 6.8 points across 14 benchmarks. Notably, it showed significant improvements of 37.1 and 30.1 points on instruction-following test sets AlpacaEval-2 and Arena-Hard respectively</strong>. Additionally, FuseChat-Llama-3.1-8B-Instruct outperformed AllenAI's recently released Llama-3.1-Tulu-3-8B model on all benchmarks except GSM8K and GPQA-Diamond. All these results demonstrate the effectiveness and success of FuseChat-3.0.
