--- a/index.html
+++ b/index.html
@@ -1034,11 +1034,13 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{yang2024wrpo,
+    <pre><code>@inproceedings{yang2025weightedreward,
   title={Weighted-Reward Preference Optimization for Implicit Model Fusion},
   author={Ziyi Yang and Fanqi Wan and Longguang Zhong and Tianyuan Shi and Xiaojun Quan},
-  journal={arXiv preprint arXiv:2412.03187},
-  year={2024}
+  booktitle={The Thirteenth International Conference on Learning Representations},
+  year={2025},
+  url={https://openreview.net/forum?id=fq24pEb8SL}
+}
 }</code></pre>
   </div>
 </section>
