--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2412.03187" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://arxiv.org/pdf/2503.04222" target="_blank" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
@@ -1041,6 +1041,12 @@
   year={2025},
   url={https://openreview.net/forum?id=fq24pEb8SL}
 }</code></pre>
+  <pre><code>@article{yang2025weightedreward,
+  title={FuseChat-3.0: Preference Optimization Meets Heterogeneous Model Fusion}, 
+  author={Ziyi Yang and Fanqi Wan and Longguang Zhong and Canbin Huang and Guosheng Liang and Xiaojun Quan},
+  journal={arXiv preprint arXiv:2503.04222},
+  year={2025},
+}}</code></pre>
   </div>
 </section>
 
