--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
   year={2025},
   url={https://openreview.net/forum?id=fq24pEb8SL}
 }</code></pre>
-  <pre><code>@article{yang2025weightedreward,
+  <pre><code>@article{yang2025fusechat,
   title={FuseChat-3.0: Preference Optimization Meets Heterogeneous Model Fusion}, 
   author={Ziyi Yang and Fanqi Wan and Longguang Zhong and Canbin Huang and Guosheng Liang and Xiaojun Quan},
   journal={arXiv preprint arXiv:2503.04222},
